improve container restart
Signed-off-by: Carsten Buchberger <c.buchberger@witcom.de>

--- a/roles/tac_plus/handlers/main.yml
+++ b/roles/tac_plus/handlers/main.yml
@@ -6,7 +6,7 @@
     name: "{{ _tac_plus_service_unit }}"
     daemon_reload: yes
     enabled: yes 
-    state: started
+    state: restarted
 
 - name: restart tac_plus
   ansible.builtin.service:
